# claim-evaluator-bot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ai-artifacts/: 01-foundation__619c8af9-46f8-47aa-b22a-310a4e95f8dc.jsonl  02-domain-and-planning__6af160a6-0190-4883-a93f-f09999fea63a.jsonl  03-planning-completion__ce072842-7e5a-40ae-8e3f-7f2a91c94d47.jsonl  04-scaffolding__3285646c-4dee-4665-818a-8deabfc6188f.jsonl  05-backend-core__a9cf76b5-3c6a-4edd-b152-3f74d00a191c.jsonl  06-backend-adjudication__678f77cb-e414-4789-81a4-81fdfcbc1cad.jsonl  07-backend-api__e60a8560-0cd8-4d9b-83f6-ec512091c961.jsonl  08-frontend__4ce4c246-1524-455d-91f3-935909caec50.jsonl  11-qa__1fd2a39f-5d58-457d-8d6e-885a3b98d428.jsonl  12-review-and-polish__feb74ac1-e4c9-4113-995c-9485a7ef1899.jsonl  README.md
app/: logging_config.py  main.py
app/adjudication/: .gitkeep  engine.py  service.py  startup.py  types.py
app/api/: .gitkeep  claim_detail.py  routes_audit.py  routes_claims.py  routes_coverage_rules.py  routes_disputes.py  routes_members.py  rule_descriptions.py  schemas.py
app/disputes/: __init__.py  service.py
app/domain/: .gitkeep  claim_state.py  entities.py
app/persistence/: .gitkeep  audit.py  database.py  models.py  repositories.py  seed.py
app/scripts/: .gitkeep  reset_db.py
app/tests/: conftest.py
data/: .gitkeep  claims.yaml  members.yaml  policies.yaml
docs/: decisions.md  domain-model.md  qa-notes.md  self-review.md
frontend/: .gitkeep  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
(+46 files in other folders)
