[project]
name = "claim-evaluator-bot"
version = "0.1.0"
description = "Claims processing system for an insurance company (take-home assignment)"
requires-python = ">=3.11"
dependencies = []

# Planned runtime dependencies (added via `uv add` in phase 05-backend-core):
#   fastapi, uvicorn[standard], sqlalchemy, pydantic
#
# Planned dev dependencies (added via `uv add --dev`):
#   pytest, httpx (FastAPI test client)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
