[project]
name = "claim-evaluator-bot"
version = "0.1.0"
description = "Claims processing system for an insurance company (take-home assignment)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
